--- a/profiles/drupalru/themes/druru/less/drupal/modules/_acal.less
+++ b/profiles/drupalru/themes/druru/less/drupal/modules/_acal.less
@@ -1,6 +1,13 @@
-.activity-calendar {
+.acal-holder {
+  margin-top: @padding-large-vertical; // @todo Replace with proper variable
   overflow-x: auto;
   overflow-y: hidden;
-  padding-bottom: 15px;
-}
 
+  .Calendar > div {
+    height: 82px !important;
+
+    > div {
+      z-index: unset !important;
+    }
+  }
+}
